Fixed contributor login alignment

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -91,7 +91,7 @@ dd { margin-bottom: 10px; }
 	$dark: nth($darks, $i);
 	$light: nth($lights, $i);
 	
-	.parent-#{$category} .wp-caption {
+	.single-#{$category} .wp-caption {
 		&:before, &:after { content: url(../images/img_#{$category}.png); } 
 	}
 	.section-#{$category}, .category-#{$category}, .parent-#{$category} {
